# controller/webapp/views/rap_views.py
@@ -12,9 +12,7 @@ from controller.queries import get_current_flags
 from controller.webapp.api_spec.utils import api_spec_json
 from controller.webapp.views.auth.rap import (
     get_backends_for_client_token,
-    require_client_token_backend_authentication,
 )
-from controller.webapp.views.tracing import trace_attributes
 from controller.webapp.views.validators.dataclasses import CancelRequest
 from controller.webapp.views.validators.decorators import validator
 
@@ -30,19 +28,6 @@ def api_docs(request):
     return HttpResponse(
         (Path(__file__).parents[1] / "api_spec" / "api_docs.html").read_text()
     )
-
-
-@csrf_exempt
-@require_GET
-@require_client_token_backend_authentication
-def backend_status(request, backend):
-    trace_attributes(backend=backend)
-    flags = {
-        f.id: {"v": f.value, "ts": f.timestamp_isoformat}
-        for f in get_current_flags(backend=backend)
-    }
-
-    return JsonResponse({"flags": flags}, json_dumps_params={"separators": (",", ":")})
 
 
 @csrf_exempt
